# copytele

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.toml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: docker.yml
scripts/: build_pyfuse3_nosudo.sh  copyparty_e2e.py  mount_smoke.py  run.sh
tests/: conftest.py  test_cache.py  test_fuse_posix.py  test_meta.py  test_store.py
tgfs/: __init__.py  asyncbridge.py  backend.py  cache.py  config.py  fuse_ops.py  main.py  meta.py  mount.py  store.py  telegram.py
