[project]
name = "copytele"
version = "0.1.0"
description = "copyparty file server backed by Telegram storage (MTProto) via a FUSE filesystem"
requires-python = ">=3.11"
dependencies = [
    "telethon>=1.36,<2",
    # libfuse3-native binding (inode-based). Builds against libfuse3 dev headers
    # + pkg-config. fusepy was the original pick but only speaks the libfuse2 ABI,
    # which isn't available on libfuse3-only hosts.
    "pyfuse3>=3.2",
    "trio>=0.22",
]

[project.optional-dependencies]
# the file-server frontend, run unmodified on top of the tgfs mountpoint
server = ["copyparty>=1.16"]
# everything needed for full copyparty parity + faster MTProto (used by the
# Docker image): thumbnails (Pillow), media tags (mutagen), password hashing
# (argon2-cffi), and cryptg for hardware-accelerated MTProto encryption.
full = [
    "copyparty>=1.16",
    "Pillow>=10",
    "mutagen>=1.47",
    "argon2-cffi>=23",
    "cryptg>=0.4",
]
dev = ["pytest>=8"]

[project.scripts]
tgfs = "tgfs.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tgfs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["."]
